feat: step-by-step instructions with numbered steps and time estimates
- Each task has numbered steps (①②③)
- Time estimates (⏱ 5分, ⏱ 10秒)
- Copy-paste ready message text for Messenger
- Green checkmark shows what さく does after
- Newlines properly rendered in instruction boxes

--- a/data/projects.json
+++ b/data/projects.json
@@ -10,9 +10,9 @@
       "blocked": ["安藤さんへのパイロット提案（ぷんつく判断待ち）"]
     },
     "nextActions": [
-      { "owner": "ぷんつく", "task": "価格設定（30万）にFBする", "how": "Docsを開いて「OK」or「ここ変えて」とコメントするだけ。5分で終わる。→ さくが即修正する", "link": "https://docs.google.com/document/d/1GrywNmN-_XP_me9udSQkV9owkCEGoIl6Q0CnvrhezW0" },
-      { "owner": "ぷんつく", "task": "安藤さんにパイロット提案する", "how": "Messengerで安藤さんに「AIエージェント導入のパイロットやりませんか」と送る。提案文はさくが下書きするので、確認して送信するだけ。→ さくが提案書+セットアップ手順を全部用意する" },
-      { "owner": "さく", "task": "Mac mini到着後のセットアップ手順書を作る", "how": "到着前に完成させておく。ぷんつくのアクション不要、自律で進める" }
+      { "owner": "ぷんつく", "task": "さくaaS価格設定にFBする", "how": "① 下の「開く」を押す\n② ドキュメントをざっと見る（導入30万、月額10-40万の設定）\n③ Discordでさくに「OK」or「ここ変えて：〇〇」と送る\n⏱ 5分", "link": "https://docs.google.com/document/d/1GrywNmN-_XP_me9udSQkV9owkCEGoIl6Q0CnvrhezW0" },
+      { "owner": "ぷんつく", "task": "安藤さんにパイロット提案する", "how": "① さくがMessengerに送る提案文を下書きするので待って\n② 下書きが来たら内容確認して、安藤さんグループに送信\n③ 送信文の例:「安藤さん、AIエージェント（さく）の導入パイロット、安藤さんのところでやらせてもらえませんか？詳細資料送ります」\n⏱ 3分（下書き確認+送信だけ）" },
+      { "owner": "さく", "task": "Mac mini到着後のセットアップ手順書を作る", "how": "自律で進める。ぷんつくのアクション不要" }
     ]
   },
   "深津壁打ち": {
@@ -26,9 +26,9 @@
       "blocked": ["アジェンダ最終確認（ぷんつく）"]
     },
     "nextActions": [
-      { "owner": "ぷんつく", "task": "壁打ちアジェンダを最終確認する", "how": "Docsを開いて流し読み（3分）。質問の順番・内容に違和感なければ「OK」とだけ言って。→ さくが当日用チートシートを作る", "link": "https://docs.google.com/document/d/13wk8fVTxBLojDTBNvyhnsewPkt9K1cBnvKhOnozYObk" },
-      { "owner": "ぷんつく", "task": "2/17当日、深津さんと壁打ち", "how": "アジェンダ通りに話す。メモはさくがMeet botで自動記録するので気にしなくてOK。聞きたいこと聞くだけ" },
-      { "owner": "さく", "task": "壁打ち後のFBをまとめてアクション化する", "how": "録音から自動で議事録+アクションアイテム抽出。ぷんつくのアクション不要" }
+      { "owner": "ぷんつく", "task": "壁打ちアジェンダを確認する", "how": "① 下の「開く」を押す\n② 質問リストを上から読む（全5問）\n③ 「この順番と内容でOK」or「〇〇を追加して」とさくに送る\n⏱ 3分", "link": "https://docs.google.com/document/d/13wk8fVTxBLojDTBNvyhnsewPkt9K1cBnvKhOnozYObk" },
+      { "owner": "ぷんつく", "task": "2/17当日、深津さんと壁打ち", "how": "① アジェンダの質問を順番に聞く\n② メモ不要（さくがMeet botで自動記録する）\n③ 気になったことはその場で深掘りしてOK\n④ 最後に「また相談させてください」で締める" },
+      { "owner": "さく", "task": "壁打ち後のFBをアクション化する", "how": "自律で進める。録音→議事録→アクションアイテム抽出を自動でやる" }
     ]
   },
   "育成プログラム": {
@@ -42,8 +42,8 @@
       "blocked": ["提案タイミング決め（ぷんつく判断待ち）"]
     },
     "nextActions": [
-      { "owner": "ぷんつく", "task": "AIC設計v3を確認する", "how": "Docsを開いて5分で読む。「これで提案していい？」の判断だけ。→ OKならさくが提案用スライドを自動で作る", "link": "https://docs.google.com/document/d/1SeohPGA7pNt1HIGIwWCkBSYwefqFVayAIScdaLGgJV0" },
-      { "owner": "ぷんつく", "task": "提案タイミングを決める", "how": "「深津壁打ち後」「来週」「今はやらない」の3択。一言くれればさくが段取り全部組む" }
+      { "owner": "ぷんつく", "task": "AIC設計v3を確認する", "how": "① 下の「開く」を押す\n② 「概要」と「プログラム構成」の2セクションだけ読む\n③ 「これで安藤さん・白川さんに見せていい？」→ OKならさくに「OK」と送る\n⏱ 5分", "link": "https://docs.google.com/document/d/1SeohPGA7pNt1HIGIwWCkBSYwefqFVayAIScdaLGgJV0" },
+      { "owner": "ぷんつく", "task": "提案タイミングを決める", "how": "さくに以下のどれか1つ送るだけ:\n・「深津壁打ち後にする」\n・「来週やる」\n・「今はやらない」\n⏱ 10秒" }
     ]
   },
   "X運用": {
@@ -57,8 +57,8 @@
       "blocked": ["承認キュー51件溜まり中（ぷんつく承認待ち）"]
     },
     "nextActions": [
-      { "owner": "ぷんつく", "task": "承認キュー51件を確認・承認する", "how": "リンクを開いて、各投稿の「承認」ボタンを押すだけ。1件3秒、全部やっても3分。まとめてバーっとやっちゃって", "link": "http://100.80.8.6:8766/queue?status=pending" },
-      { "owner": "さく", "task": "TL巡回+いいね+投稿案作成を継続", "how": "完全自律。ぷんつくのアクション不要" }
+      { "owner": "ぷんつく", "task": "X投稿の承認キューを処理する", "how": "① 下の「開く」を押す（承認ページが開く）\n② 各投稿を見て「承認」or「却下」ボタンを押す\n③ 全部見なくてOK、上から良さそうなのだけ承認でも大丈夫\n⏱ 1件3秒 × 好きなだけ", "link": "http://100.80.8.6:8766/queue?status=pending" },
+      { "owner": "さく", "task": "TL巡回+いいね+投稿案作成を継続", "how": "自律で進める。ぷんつくのアクション不要" }
     ]
   },
   "事業計画": {
@@ -72,8 +72,8 @@
       "blocked": ["方向性の最終決定（深津壁打ち後）"]
     },
     "nextActions": [
-      { "owner": "ぷんつく", "task": "深津壁打ち後に方向性を最終決定する", "how": "壁打ち終わったら「この方向で行く」or「変える」をさくに言うだけ。→ さくが即ビジネスプラン更新+実行計画を作る" },
-      { "owner": "さく", "task": "壁打ちFB反映後にビジネスプランを更新する", "how": "ぷんつくの判断待ち。判断もらえたら即日で更新する" }
+      { "owner": "ぷんつく", "task": "深津壁打ち後に方向性を決める", "how": "壁打ち後にさくに以下のどれか送るだけ:\n・「さくaaS路線で行く」\n・「Lindy日本版で行く」\n・「別の方向にする：〇〇」\n⏱ 10秒（さくが即ビジネスプラン更新+実行計画を作る）" },
+      { "owner": "さく", "task": "方向性決定後にビジネスプランを更新する", "how": "ぷんつくの判断待ち。もらえたら即日で更新" }
     ]
   },
   "AITech": {
@@ -87,7 +87,7 @@
       "blocked": []
     },
     "nextActions": [
-      { "owner": "さく", "task": "次回講座テーマを藤井さんと調整する", "how": "完全自律。Messengerで藤井さんに確認して資料作成まで進める" }
+      { "owner": "さく", "task": "次回講座テーマを藤井さんと調整する", "how": "自律で進める。Messengerで藤井さんに確認して資料作成まで全部やる" }
     ]
   },
   "インフラ・ツール": {
@@ -101,8 +101,8 @@
       "blocked": []
     },
     "nextActions": [
-      { "owner": "さく", "task": "通知検知漏れ対策を実装する", "how": "完全自律。Gmail通知のフォールバック強化+ブラウザ再起動ロジック追加" },
-      { "owner": "さく", "task": "ダッシュボードの改善を継続する", "how": "完全自律。ぷんつくのFBがあれば即反映する" }
+      { "owner": "さく", "task": "通知検知漏れ対策を実装する", "how": "自律で進める。ぷんつくのアクション不要" },
+      { "owner": "さく", "task": "ダッシュボードの改善を継続する", "how": "自律で進める。FBがあれば即反映" }
     ]
   },
   "saku-meet-bot": {
@@ -116,7 +116,7 @@
       "blocked": ["Phase 2設計待ち（優先度低め、壁打ち後に判断）"]
     },
     "nextActions": [
-      { "owner": "さく", "task": "Phase 2の設計を進める", "how": "完全自律。議事録自動要約+Docs共有の設計書を作る。壁打ち後に優先度上がったら実装着手" }
+      { "owner": "さく", "task": "Phase 2の設計を進める", "how": "自律で進める。壁打ち後に優先度上がったら実装着手" }
     ]
   },
   "DEスクール": {
@@ -130,8 +130,7 @@
       "blocked": ["Mindcraft実装着手（藤井さんとの方針共有待ち）"]
     },
     "nextActions": [
-      { "owner": "ぷんつく", "task": "藤井さんに実装方針を共有する", "how": "次回MTGで「Mindcraftフォークして進めていいですか」と聞くだけ。資料はさくが用意する。→ OKもらえたらさくが即実装着手" },
-      { "owner": "さく", "task": "Mindcraftフォークしてmemory_bank.js拡張に着手", "how": "藤井さんのOK待ち。OKもらえたら即日着手、1週間でプロトタイプ作る" }
+      { "owner": "ぷんつく", "task": "藤井さんにMindcraft実装の許可をもらう", "how": "次回MTGで藤井さんに聞く:\n「Mindcraftをフォークしてmine.de.school用にカスタマイズしていいですか？memory_bankの拡張から始めます」\n→ OKもらったらさくに「OK出た」と送るだけ\n⏱ MTG中に1分" }
     ]
   }
 }
